# logme_interface

./: .gitignore  .gitmodules  API_doc.md  CMakeLists.txt  README.md  docker-compose.yaml  partitions_example.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml  buildtest.yml  createrelease.yml
components/esp_mbus/: CMakeLists.txt  README.md  mbus-protocol.c  mbus-serial.c  mbus.c
components/esp_mbus/include/: mbus-protocol.h
main/: CMakeLists.txt  Kconfig.projbuild  PIN_CONFIG.h  main.c  mbus_serial_scan.c  mbus_serial_scan.h  sensor_tasks.h
main/fs/: config.c  config.h  file_hanlder.c  file_hanlder.h  fs.h
main/mqtt/: mqtt_manager.c  mqtt_manager.h
main/ota/: ota_manager.c  ota_manager.h
main/sensors/: mbus_sensor_t.h  sensor_helper.c  sensor_helper.h  sensor_manager.c  sensor_manager.h  sml_sensor_t.h
main/sml_sensor/: smart_meter_t.h  sml_sensor.h
main/system/: system_info.c  system_info.h
main/timer/: timer_manager.c  timer_manager.h
main/web/: mdns.h  rest_get_handler.h  rest_helper.h  rest_post_handler.h  rest_server.c  rest_server.h  rest_server_helper.c  rest_server_helper.h  rest_types.h  status_reponse.h  wss_handler.h
main/web/handler_get/: rest_get_handler.c  rest_get_handler.h
main/web/handler_post/: rest_post_handler.c  rest_post_handler.h
main/web/wss_manager/: wss_manager.c  wss_manager.h
main/wifi/: http_app_old.c  nvs_sync.c  nvs_sync.h  wifi_connect.c  wifi_helper.h  wifi_manager.c  wifi_manager.h
web-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web-ui/json-server/: logme_endpoints.json  readme.md
web-ui/public/: default_sensor_config.json  default_system_config.json  sensorstore.json
web-ui/src/: App.vue  main.css  main.ts  vite-env.d.ts
web-ui/src/components/Elements/Sensors/: NoDataElement.vue  PowerSensorElement.vue  SensorElement.vue  StatusElement.vue  ValueElement.vue
web-ui/src/components/Elements/Settings/: CronJobsElement.vue  HistoryElement.vue  MqttElement.vue  NetworkElement.vue  SystemInfoElement.vue  WebAppElement.vue
web-ui/src/components/buttons/: DarkModeButton.vue  SensorTypeToggle.vue  ToggleButton.vue
web-ui/src/components/charts/: AreaChart.vue  BarChart.vue  LineChartSimple.vue
web-ui/src/components/header_footer/: FooterComponent.vue  HeaderComponent.vue
web-ui/src/components/icons/: DefaultIcon.vue  EditIcon.vue  ErrorIcon.vue  GaugeIcon.vue  GithubIcon.vue  IdleIcon.vue  InfoIcon.vue  LightIcon.vue  NumbersIcon.vue  PowerPlugIcon.vue  ReadingIcon.vue  ReloadIcon.vue  SettingsIcon.vue  SmartMeterIcon.vue  WarnIcon.vue
web-ui/src/components/modals/: CronJobEditModal.vue  MqttEditModal.vue  ValueEditModal.vue  WifiCredentialsModal.vue
web-ui/src/components/tables/: SensorStoreSettingsTable.vue  SimpleTable.vue  SystemTable.vue
web-ui/src/components/views/: EndpointsView.vue  HomeView.vue  SensorView.vue  SettingsView.vue
web-ui/src/scripts/: action_commands.ts  toast_config.ts
web-ui/src/stores/: AppStore.ts  Sensor.ts  SensorStore.ts  type_Sensor.ts
web-ui/src/stores/interfaces/: I_CronJob.ts  I_Mqtt.ts  I_Sensor.ts  I_System.ts  I_WiFi.ts  T_AccessPoint.ts  T_SensorTypes.ts
